# signal-foundry

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: api_limits.yaml  capture_hip4.yaml  fomo_model.yaml  market_keyword_rules.yaml  prediction_venues.yaml  social_watchlist.yaml  source_discovery_v2.yaml  wallet_watchlist.yaml  web3_account_watchlist.yaml  web3_narrative_keywords.yaml
docs/: historical-backtest-system-design.md  latest-hyperliquid-hip4-targets.md  latest-kalshi-targets.md  latest-polymarket-targets.md  prediction-market-feasibility-and-wallet-tracking-plan.md  web3-quant-research-2026-05-14.md
goal/: long-term-research-goal.md  v2-execution-plan.md
progress/: 2026-05-16-project-status.md  2026-05-17-finance-model-repair.md  2026-05-19-v2-phase0a.md
quant_sol/: __init__.py
quant_sol/capture/: __init__.py  hip4_l2.py
quant_sol/signals/: __init__.py  accounts.py  cli.py  clients.py  config.py  diagnostics.py  discovery.py  env.py  history.py  matching.py  models.py  price_first.py  reporting.py  scoring 2.py  scoring.py  semantic.py  storage.py  telegram.py  utils.py
quant_sol/wallets/: __init__.py  analysis.py  (+6 more)
scripts/: check_l2_integrity.py
tests/: test_cli.py  test_client_pagination.py  test_config_client.py  test_env_api_setup.py  test_event_history.py  test_hip4_l2_capture.py  test_model_diagnostics.py  test_price_first.py  test_signal_discovery.py  test_signals_cli_telegram.py  test_signals_config_matching.py  test_signals_scoring 2.py  test_signals_scoring.py  test_storage_analysis.py  test_web3_accounts.py
