[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-sol"
version = "0.1.0"
description = "Read-only Web3 quant research tools."
requires-python = ">=3.9"
dependencies = [
  "duckdb>=0.10",
  "pandas>=2.0",
  "pydantic>=2.0",
  "requests>=2.31",
  "rich>=13.0",
  "typer>=0.9",
  "pyyaml>=6.0",
  "websocket-client>=1.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
semantic = [
  "sentence-transformers>=2.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["quant_sol*"]
